# finam-tradebot-py

./: .env.example  pyproject.toml  script-name.py
scripts/: generete_proto.sh
src/: README.md
src/api/: market_data.py  order_client.py
src/app/: application.py
src/auth/: manager.py
src/core/: backoff.py  contract.py  domain.py  errors.py  event_bus.py  interfaces.py  maintenance.py
src/risk/: manager.py
src/strategy/: confluence.py  runner.py
tests/unit/: test_auth.py  test_contract.py  test_risk.py
